# rules_nasm

./: .bazelrc  .gitignore  404.html  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  buildbuddy.yaml  fetch_checksums.sh  index.html  print.html  remote.bazelrc  repositories.bzl  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  toolchains.bzl  version.bzl
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/: ci.bazelrc  release_notes.template
.github/workflows/: ci.bazelrc  docs.yaml  release.yaml  release_prep.sh  tests.yaml
docs/: BUILD.bazel  README.md  book.toml  docs.md  header.vm
docs/src/: SUMMARY.md  index.md
e2e/: test.sh
e2e/c_library/: MODULE.bazel  Makefile  remote.bazelrc
e2e/c_library/libadd/: BUILD.bazel  add.c  add.h  add.s
e2e/c_library/libadd/x86/: add.asm  add_asm.h  add_x86.asm  x86util.asm
e2e/c_library/libeq/: BUILD.bazel  eq.c  eq.h
e2e/c_library/libeq/x86/: eq_asm.h  eq_x86.asm
e2e/c_library/tests/: BUILD.bazel  add_test.c  eq_test.c
e2e/diamond/: .bazelrc  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-diamond  bazel-out  bazel-testlogs  remote.bazelrc
e2e/second_degree/: MODULE.bazel
e2e/second_degree/libcompsum/: BUILD.bazel  compsum.c  compsum.h
e2e/second_degree/tests/: BUILD.bazel  compsum_test.c
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  bazel-bin  bazel-out  bazel-smoke  bazel-testlogs  tests
examples/boot_loader/: boot.asm
examples/cross_compilation/: .bazelrc  MODULE.bazel  README.md
examples/cross_compilation/hello/: BUILD.bazel  hello.asm  x86util.asm
examples/cross_compilation/toolchains/: BUILD.bazel  cc_toolchain_config.bzl
nasm/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  nasm_cc_binary.bzl  nasm_cc_library.bzl  nasm_cc_test.bzl  nasm_library.bzl  nasm_toolchain.bzl  toolchains.bzl
nasm/private/: BUILD.bazel  cc_rules.bzl  nasm_toolchain.bzl  urls.bzl
nasm/private/rules/: .cc_toolchain.bzl.swp  BUILD.bazel  binary.bzl  library.bzl  test.bzl
nasm/toolchain/: BUILD.bazel  BUILD.macosx  BUILD.source  ver.patch
tests/: BUILD.bazel  always_succeed_main.asm  always_succeed_main_mac.asm  includes_main.asm  nasm_component_test.asm  nasm_component_test.c  nasm_component_test_mac.asm  native_test.bzl  preincs_main.asm
tests/bzl_version/: BUILD.bazel  bzl_version_test.cc
tests/executable_assembler/: BUILD.bazel  get_nasm_tool_test.cc  get_nasm_tool_test.sh
tests/foreign_cc_test/: BUILD.bazel  get_nasm_tool_test.sh
tests/includes/: includes_inc.asm
