module(
    name = "rules_nasm",
    version = "0.0.0",
)

bazel_dep(name = "bazel_features", version = "1.19.0",)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0",)
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "stardoc", version = "0.7.1")

nasm = use_extension("//nasm:extensions.bzl", "nasm")

nasm.toolchain(nasm_version = "2.16.03", _repo_name="nasm_test_toolchains")
nasm.toolchain(nasm_version = "2.16.02", _repo_name="nasm_test_toolchains")
nasm.toolchain(nasm_version = "2.16.01", _repo_name="nasm_test_toolchains")
use_repo(nasm, "nasm_toolchains", "nasm_test_toolchains")
register_toolchains("@nasm_toolchains//:all")
