load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//nasm/private:nasm_toolchain.bzl", "current_nasm_assembler")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//nasm/private:cc_rules",
        "//nasm/private:nasm_toolchain",
    ],
)

exports_files([
    "defs.bzl",
])

config_setting(
    # doc = "Target supports ELF64 binaries (linux x86-64)",
    name = "elf64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    # doc = "Target supports Mach-O x86-64 binaries (e.g. MacOS)",
    name = "macho64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

current_nasm_assembler(
    name = "assembler",
    visibility = ["//visibility:public"],
)
