load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//nasm/private:nasm_toolchain.bzl", "current_nasm_assembler")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//nasm/private:cc_rules",
        "//nasm/private:nasm_toolchain",
    ],
)

exports_files([
    "defs.bzl",
])

current_nasm_assembler(
    name = "current_nasm_assembler",
    visibility = ["//visibility:public"],
)

alias(
    name = "assembler",
    actual = ":current_nasm_assembler",
    visibility = ["//visibility:public"],
)
