# Copyright (c) 2024 Morgan Wajda-Levie.

load("@rules_nasm//nasm:defs.bzl", "nasm_test", "nasm_library", "nasm_binary")


nasm_test(
    name = "nasm_test_test",
    size = "small",
    src = select({
        "@platforms//os:linux": "always_succeed_main.asm",
        "@platforms//os:macos": "always_succeed_main_mac.asm",
    }),
)

cc_test(
    name = "nasm_component_test",
    size = "small",
    srcs = ["nasm_component_test.c"],
    deps = [":nasm_component"],
)

nasm_library(
    name = "nasm_component",
    src = select({
        "@platforms//os:linux": "nasm_component_test.asm",
        "@platforms//os:macos": "nasm_component_test_mac.asm",
    }),
)

sh_test(
    name = "nasm_binary_test",
    size = "small",
    srcs = select({
        "@platforms//os:linux": [":nasm_executable"],
        "@platforms//os:macos": [":nasm_executable_mac"],
    })
)

nasm_binary(
    name = "nasm_executable",
    src = "always_succeed_main.asm",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

nasm_binary(
    name = "nasm_executable_mac",
    src = "always_succeed_main_mac.asm",
    target_compatible_with = [
        "@platforms//os:macos",
    ],
)

nasm_test(
    name = "includes_test",
    size = "small",
    src = "includes_main.asm",
    hdrs = [
        "includes_inc.asm",
    ],
)

nasm_test(
    name = "preincludes_test",
    size = "small",
    src = "preincs_main.asm",
    preincs = [
        "includes_inc.asm"
    ],
)
