# Copyright (c) 2024 Morgan Wajda-Levie.

load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_nasm//nasm:defs.bzl", "nasm_cc_binary", "nasm_cc_library", "nasm_cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

nasm_cc_test(
    name = "nasm_test_test",
    size = "small",
    srcs = select({
        "@platforms//os:linux": ["always_succeed_main.asm"],
        "@platforms//os:macos": ["always_succeed_main_mac.asm"],
    }),
)

cc_test(
    name = "nasm_component_test",
    size = "small",
    srcs = ["nasm_component_test.c"],
    deps = [":nasm_component"],
)

nasm_cc_library(
    name = "nasm_component",
    srcs = select({
        "@platforms//os:linux": ["nasm_component_test.asm"],
        "@platforms//os:macos": ["nasm_component_test_mac.asm"],
    }),
)

sh_test(
    name = "nasm_binary_test",
    size = "small",
    srcs = select({
        "@platforms//os:linux": [":nasm_executable"],
        "@platforms//os:macos": [":nasm_executable_mac"],
    }),
)

nasm_cc_binary(
    name = "nasm_executable",
    srcs = ["always_succeed_main.asm"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

nasm_cc_binary(
    name = "nasm_executable_mac",
    srcs = ["always_succeed_main_mac.asm"],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
)

nasm_cc_test(
    name = "includes_test",
    size = "small",
    srcs = ["includes_main.asm"],
    hdrs = [
        "includes_inc.asm",
    ],
)

nasm_cc_test(
    name = "preincludes_test",
    size = "small",
    srcs = ["preincs_main.asm"],
    preincs = [
        "includes_inc.asm",
    ],
)

nasm_cc_test(
    name = "includes_path_test",
    size = "small",
    srcs = ["includes_main.asm"],
    hdrs = ["includes/includes_inc.asm"],
    includes = ["includes"],
)
