# Copyright (c) 2024 Morgan Wajda-Levie.

load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_nasm//nasm:defs.bzl", "nasm_cc_binary", "nasm_cc_library", "nasm_cc_test")
load("@bazel_skylib//rules:native_binary.bzl", "native_test")

nasm_cc_test(
    name = "nasm_test_test",
    size = "small",
    srcs = select({
        "@platforms//os:macos": ["always_succeed_main_mac.asm"],
        "//conditions:default": ["always_succeed_main.asm"],
    }),
)

cc_test(
    name = "nasm_component_test",
    size = "small",
    srcs = ["nasm_component_test.c"],
    deps = [":nasm_component"],
)

nasm_cc_library(
    name = "nasm_component",
    srcs = select({
        "@platforms//os:macos": ["nasm_component_test_mac.asm"],
        "//conditions:default": ["nasm_component_test.asm"],
    }),
)

native_test(
    name = "nasm_binary_test",
    size = "small",
    src = select({
        "@platforms//os:macos": ":nasm_executable_mac",
        "//conditions:default": ":nasm_executable",
    }),
)

nasm_cc_binary(
    name = "nasm_executable",
    srcs = ["always_succeed_main.asm"],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

nasm_cc_binary(
    name = "nasm_executable_mac",
    srcs = ["always_succeed_main_mac.asm"],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
)

nasm_cc_test(
    name = "includes_test",
    size = "small",
    srcs = ["includes_main.asm"],
    hdrs = [
        "includes_inc.asm",
    ],
)

nasm_cc_test(
    name = "preincludes_test",
    size = "small",
    srcs = ["preincs_main.asm"],
    preincs = [
        "includes_inc.asm",
    ],
)

nasm_cc_test(
    name = "includes_path_test",
    size = "small",
    srcs = ["includes_main.asm"],
    hdrs = ["includes/includes_inc.asm"],
    includes = ["includes"],
)
