"""Test integration of nasm sources into C library.

This library is organized in an old-school C fashion, with a source
directory mapped directly onto the repo root directory.
"""

module(
    name = "rules_nasm_c_library",
)

bazel_dep(name = "rules_nasm", version = "0.0.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

local_path_override(
    module_name = "rules_nasm",
    path = "../..",
)

register_toolchains("@rules_nasm//nasm/toolchain")
