bazel_dep(name = "rules_nasm", version = "0.1.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "rules_nasm",
    path = "../..",
)

nasm = use_extension("@rules_nasm//nasm:extensions.bzl", "nasm")
nasm.toolchain(nasm_version = "2.16.03")
