module(
    name = "cross_compilation",
)

bazel_dep(name = "rules_nasm", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

local_path_override(
    module_name = "rules_nasm",
    path = "../..",
)

register_toolchains("@rules_nasm//nasm/toolchain")
