load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "nasm_toolchain",
    srcs = ["nasm_toolchain.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "cc_rules",
    srcs = ["cc_rules.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["//nasm/private/rules:library"],
)
