load("@rules_nasm//nasm:defs.bzl", "nasm_library")

cc_library(
    name = "add",
    hdrs = ["add.h"],
    srcs = [
        "add.c",
        "x86/add_asm.h",
    ],
    deps = [
        "add_x86"
    ],
    visibility = ["//visibility:public"],
)

nasm_library(
    name = "add_x86",
    src = "x86/add_x86.asm",
    hdrs = [
        "x86/x86util.asm"
    ],
)
