load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_nasm//nasm:defs.bzl", "nasm_cc_library")

exports_files([
    "x86/x86util.asm",
])

cc_library(
    name = "add",
    srcs = [
        "add.c",
        "x86/add_asm.h",
    ],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
    deps = [
        "add_x86",
    ],
)

nasm_cc_library(
    name = "add_x86",
    srcs = ["x86/add_x86.asm"],
    hdrs = [
        "x86/x86util.asm",
    ],
)
