load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_nasm//nasm:defs.bzl", "nasm_cc_library")

cc_library(
    name = "eq",
    srcs = [
        "eq.c",
        "x86/eq_asm.h",
    ],
    hdrs = ["eq.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":eq_x86",
    ],
)

nasm_cc_library(
    name = "eq_x86",
    srcs = ["x86/eq_x86.asm"],
    hdrs = [
        "//libadd:x86/x86util.asm",
    ],
)
