load("//toolchains:cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

toolchain(
    name = "cc-compiler-x86-gnu",
    toolchain = ":cc-compiler-x86-gnu_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

cc_toolchain(
    name = "cc-compiler-x86-gnu_toolchain",
    toolchain_identifier = "cc-compiler-x86-gnu_toolchain",
    toolchain_config = ":cc-compiler-x86-gnu_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain_config(
    name = "cc-compiler-x86-gnu_config",
    toolchain_identifier = "x86_64-gnu",
    compiler = "gcc",
    compiler_version = "12",
    toolchain_prefix = "/usr/bin/x86_64-linux-gnu",
)
