load("@rules_cc//cc/toolchains:cc_toolchain.bzl", "cc_toolchain")
load("//toolchains:cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

toolchain(
    name = "cc-compiler-x86-gnu",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":cc-compiler-x86-gnu_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "cc-compiler-x86-gnu_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":cc-compiler-x86-gnu_config",
    toolchain_identifier = "cc-compiler-x86-gnu_toolchain",
)

cc_toolchain_config(
    name = "cc-compiler-x86-gnu_config",
    compiler = "gcc",
    compiler_version = "12",
    toolchain_identifier = "x86_64-gnu",
    toolchain_prefix = "/usr/bin/x86_64-linux-gnu",
)
