load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = ["//:__subpackages__"],
)
