load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# TODO: https://github.com/bazelbuild/rules_cc/issues/279
bzl_library(
    name = "rules_cc",
    srcs = ["@rules_cc//cc:bzl_srcs"],
    deps = ["@rules_cc//cc/common"],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":rules_cc",
        "@bazel_skylib//lib:paths",
    ],
)
